# py-cms

./: LICENSE  README.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  DynamicTable.tsx
frontend/src/components/: DynamicForm.tsx  RelatedTable.tsx  Sidebar.tsx
frontend/src/utils/: UiSchema.ts
frontend/src/widgets/: MultiReferenceWidget.tsx  ReferenceWidget.tsx  StarRatingWidget.tsx
py_cms/: app.py  metagen.py  repo.py  test.py
py_cms/metadata/: field.py
